fixed bidding and added countdown timer

--- a/Bezos/src/main/webapp/WEB-INF/web.xml
+++ b/Bezos/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,16 @@
     <servlet-name>SigninServlet</servlet-name>
     <url-pattern>/SigninServlet</url-pattern>
   </servlet-mapping>
+    <servlet>
+    <description></description>
+    <display-name>ItemServlet</display-name>
+    <servlet-name>ItemServlet</servlet-name>
+    <servlet-class>com.app.ItemServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ItemServlet</servlet-name>
+    <url-pattern>/ItemServlet</url-pattern>
+  </servlet-mapping>
   <servlet>
     <description></description>
     <display-name>NewItemServlet</display-name>
@@ -102,16 +112,6 @@
   <servlet-mapping>
     <servlet-name>LogoutServlet</servlet-name>
     <url-pattern>/LogoutServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>BidServlet</display-name>
-    <servlet-name>BidServlet</servlet-name>
-    <servlet-class>com.app.BidServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>BidServlet</servlet-name>
-    <url-pattern>/BidServlet</url-pattern>
   </servlet-mapping>
   <servlet>
 		<description></description>
